--- a/app/src/main/res/layout/activity_food.xml
+++ b/app/src/main/res/layout/activity_food.xml
@@ -18,15 +18,46 @@
             android:minHeight="50dp"
             app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
-            <View
+            <FrameLayout
                 android:layout_width="match_parent"
-                android:layout_height="375dp"
-                android:background="@color/color_282626" />
+                android:layout_height="375dp">
+
+                <com.bigkoo.convenientbanner.ConvenientBanner
+                    android:id="@+id/banner2"
+                    android:layout_width="match_parent"
+                    android:layout_height="375dp"
+                    app:canLoop="true">
+
+                    <View
+                        android:id="@+id/background"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:background="@color/white" />
+                </com.bigkoo.convenientbanner.ConvenientBanner>
+
+                <TextView
+                    android:id="@+id/tv_index"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="1/5"
+                    android:paddingLeft="6dp"
+                    android:paddingTop="1dp"
+                    android:paddingRight="6dp"
+                    android:paddingBottom="1dp"
+                    android:background="@drawable/bg_banner_bottom_tag"
+                    android:textColor="@color/white"
+                    android:layout_marginRight="10dp"
+                    android:layout_marginBottom="10dp"
+                    android:textSize="11sp"
+                    android:layout_gravity="bottom|right"/>
+            </FrameLayout>
+
+
 
             <androidx.appcompat.widget.Toolbar
                 android:id="@+id/ll_toolbar"
                 android:layout_width="match_parent"
-                android:layout_height="50dp"
+                android:layout_height="45dp"
                 app:contentInsetStart="0dp"
                 app:contentInsetStartWithNavigation="0dp"
                 app:layout_collapseMode="pin">
@@ -35,30 +66,23 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent">
 
-                    <View
-                        android:id="@+id/background"
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:background="@color/white"/>
-
-
                     <ImageView
                         android:id="@+id/iv_back"
                         android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentBottom="true"
+                        android:padding="10dp"
                         android:gravity="center_vertical"
-                        android:paddingLeft="10dp"
-                        android:paddingRight="10dp"
                         android:src="@drawable/icon_xiangxiashenzhan" />
 
                     <ImageView
                         android:id="@+id/iv_share"
                         android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_alignParentBottom="true"
                         android:gravity="center_vertical"
                         android:layout_alignParentRight="true"
-                        android:paddingLeft="10dp"
-                        android:paddingRight="10dp"
+                        android:padding="10dp"
                         android:src="@drawable/icon_share" />
                 </RelativeLayout>
             </androidx.appcompat.widget.Toolbar>
@@ -70,7 +94,7 @@
             android:layout_width="match_parent"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
-            android:paddingTop="15dp"
+            android:paddingTop="10dp"
             android:paddingBottom="15dp"
             android:layout_height="wrap_content">
 
@@ -142,39 +166,58 @@
     </com.google.android.material.appbar.AppBarLayout>
 
 
-    <androidx.core.widget.NestedScrollView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recyclerview"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+        app:layout_behavior="@string/appbar_scrolling_view_behavior"/>
 
-        <LinearLayout
-            android:layout_width="match_parent"
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="44dp"
+        android:elevation="5dp"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
+        android:background="@color/white"
+        android:gravity="center_vertical"
+        android:layout_gravity="bottom"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical">
+            android:src="@drawable/icon_xuangou"/>
 
+        <View
+            android:layout_width="0dp"
+            android:layout_height="1px"
+            android:layout_weight="1"/>
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclerview"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="17sp"
+            android:paddingBottom="6dp"
+            android:paddingTop="6dp"
+            android:paddingRight="13dp"
+            android:paddingLeft="13dp"
+            android:background="@drawable/btn_stroke_yellow"
+            android:textColor="@color/color_FF6600"
+            android:text="加入购物车"/>
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="10dp"
-                android:background="@color/color_F5F5F5"/>
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:textSize="17sp"
-                android:textColor="@color/color_282626"
-                android:textStyle="bold"
-                android:paddingTop="20dp"
-                android:paddingBottom="20dp"
-                android:paddingLeft="10dp"
-                android:text="商品详情"/>
-        </LinearLayout>
-
-    </androidx.core.widget.NestedScrollView>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="17sp"
+            android:paddingBottom="6dp"
+            android:paddingTop="6dp"
+            android:paddingRight="13dp"
+            android:layout_marginLeft="10dp"
+            android:paddingLeft="13dp"
+            android:background="@drawable/btn_gradient_yellow_round"
+            android:textColor="@color/white"
+            android:text="立即购买"/>
+    </LinearLayout>
 
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
