--- a/app/src/main/res/layout/item_home.xml
+++ b/app/src/main/res/layout/item_home.xml
@@ -1,75 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:background="@color/transparent"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:background="@drawable/shadow"
+    android:paddingLeft="5dp"
+    android:paddingTop="5dp"
+    android:paddingRight="5dp"
+    android:paddingBottom="15dp">
 
-    <RelativeLayout
+
+    <ImageView
+        android:id="@+id/iv_image"
         android:layout_width="match_parent"
+        android:layout_height="173dp"
+        android:layout_centerHorizontal="true"
+        android:scaleType="centerCrop"
+        android:src="@drawable/food" />
+
+    <TextView
+        android:id="@+id/tv_title"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp"
-        android:paddingBottom="9dp"
-        android:background="@drawable/shadow">
+        android:layout_below="@+id/iv_image"
+        android:layout_marginTop="24dp"
+        android:layout_marginLeft="10dp"
+        android:text="精品海鲜捞面"
+        android:textColor="@color/color_282525"
+        android:textSize="15sp" />
+
+    <TextView
+        android:id="@+id/tv_content"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tv_title"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="5dp"
+        android:text="新鲜虾肉，只为一口"
+        android:textColor="@color/color_7C7877"
+        android:textSize="12sp" />
+
+    <TextView
+        android:id="@+id/tv_tag"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tv_content"
+        android:layout_marginLeft="10dp"
+        android:layout_marginTop="7dp"
+        android:text="不可用券"
+        android:textColor="@color/color_FF6200"
+        android:textSize="10sp" />
+
+    <TextView
+        android:id="@+id/tv_money"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_below="@+id/tv_tag"
+        android:layout_marginTop="7dp"
+        android:text="¥0.0"
+        android:textColor="@color/color_FF5050"
+        android:textSize="12sp" />
+
+    <ImageView
+        android:id="@+id/iv_chart"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/tv_tag"
+        android:layout_marginRight="10dp"
+        android:layout_alignParentRight="true"
+        android:src="@drawable/icon_gouwuche" />
 
 
-        <ImageView
-            android:id="@+id/iv_image"
-            android:layout_width="match_parent"
-            android:layout_height="173dp"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="14sp"
-            android:scaleType="fitXY"
-            android:src="@drawable/food2" />
-
-        <TextView
-            android:id="@+id/tv_title"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/iv_image"
-            android:layout_marginTop="24dp"
-            android:text="精品海鲜捞面"
-            android:textColor="@color/color_282525"
-            android:textSize="15sp" />
-
-        <TextView
-            android:id="@+id/tv_content"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/tv_title"
-            android:layout_marginTop="5dp"
-            android:text="新鲜虾肉，只为一口"
-            android:textColor="@color/color_7C7877"
-            android:textSize="12sp" />
-
-        <TextView
-            android:id="@+id/tv_tag"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/tv_content"
-            android:layout_marginTop="7dp"
-            android:text="不可用券"
-            android:textColor="@color/color_FF6200"
-            android:textSize="10sp" />
-
-        <TextView
-            android:id="@+id/tv_money"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/tv_tag"
-            android:layout_marginTop="7dp"
-            android:text="¥0.0"
-            android:textColor="@color/color_FF5050"
-            android:textSize="12sp" />
-
-        <ImageView
-            android:id="@+id/iv_chart"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/tv_tag"
-            android:layout_alignParentRight="true"
-            android:src="@drawable/icon_gouwuche" />
-
-
-    </RelativeLayout>
-</FrameLayout>
+</RelativeLayout>
