--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -20,7 +20,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="29dp"
         android:layout_gravity="center_horizontal"
-        android:src="@drawable/logo"/>
+        android:src="@drawable/logo_login"/>
 
     <TextView
         android:layout_width="wrap_content"
