--- a/app/src/main/res/layout/dialog_order_choose_time.xml
+++ b/app/src/main/res/layout/dialog_order_choose_time.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="285dp"
-    android:paddingBottom="30dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:background="@drawable/bg_topround20dp_white">
+    android:background="@drawable/bg_topround20dp_white"
+    android:paddingBottom="30dp">
 
     <ImageView
         android:id="@+id/close"
@@ -15,33 +15,68 @@
         android:padding="10dp"
         android:src="@drawable/icon_guanbi"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
 
     <TextView
         android:id="@+id/tv_pay_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="20dp"
+        android:gravity="center"
+        android:text="选择预定送达时间"
         android:textColor="@color/color_282626"
         android:textSize="17sp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:gravity="center"
-        android:layout_marginTop="20dp"
-        android:text="选择预定送达时间"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginLeft="47dp"
-        android:layout_marginRight="47dp"
-        android:text="米粒支付¥10"
-        android:gravity="center"
-        android:textSize="17sp"
-        android:background="@drawable/btn_gradient_yellow_round"
-        android:layout_marginTop="30dp"
-        app:layout_constraintTop_toBottomOf="@+id/tv_pay_title"
+
+    <com.bee.user.widget.RadioGroupPlus
+        android:id="@+id/buttons"
+        android:layout_width="100dp"
+        android:layout_height="80dp"
+        android:layout_marginTop="56dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:textColor="@color/white"/>
+        app:layout_constraintTop_toTopOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <RadioButton
+                android:id="@+id/rb_1"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:button="@null"
+                android:gravity="center"
+                android:padding="10dp"
+                android:text="今天(周二)"
+                android:background="@drawable/color_choose_time_background"
+                android:textColor="@drawable/color_choose_time_selector"
+                android:textSize="14sp" />
+
+            <RadioButton
+                android:id="@+id/rb_2"
+                android:layout_width="match_parent"
+                android:layout_height="40dp"
+                android:button="@null"
+                android:gravity="center"
+                android:padding="10dp"
+                android:text="明天(周三)"
+                android:background="@drawable/color_choose_time_background"
+                android:textColor="@drawable/color_choose_time_selector"
+                android:textSize="14sp" />
+        </LinearLayout>
+
+    </com.bee.user.widget.RadioGroupPlus>
+
+    <View
+        android:layout_width="100dp"
+        android:layout_height="0dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:background="@color/color_F5F5F5"
+        app:layout_constraintTop_toBottomOf="@+id/buttons"
+        app:layout_constraintBottom_toBottomOf="parent"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
