--- a/app/src/main/res/layout/activity_store.xml
+++ b/app/src/main/res/layout/activity_store.xml
@@ -1,204 +1,228 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/white">
+    android:layout_height="match_parent">
 
-    <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/app_barbar"
-        android:background="@color/white"
+    <androidx.coordinatorlayout.widget.CoordinatorLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="match_parent"
+        android:background="@color/white">
 
-        <com.google.android.material.appbar.CollapsingToolbarLayout
-            android:id="@+id/collapsing"
+        <com.google.android.material.appbar.AppBarLayout
+            android:id="@+id/app_barbar"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+            android:layout_height="wrap_content"
+            android:background="@color/white">
 
-            <ImageView
+            <com.google.android.material.appbar.CollapsingToolbarLayout
+                android:id="@+id/collapsing"
                 android:layout_width="match_parent"
-                android:layout_height="180dp"
-                android:scaleType="fitXY"
-                android:src="@drawable/bg_chengse"/>
+                android:layout_height="match_parent"
+                app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical">
-
-
-                <include
-                    layout="@layout/item_store_shadow"
+                <ImageView
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:layout_marginTop="100dp"
-                    android:layout_marginRight="5dp" />
+                    android:layout_height="180dp"
+                    android:scaleType="fitXY"
+                    android:src="@drawable/bg_chengse" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="30dp"
-                    android:layout_marginLeft="10dp"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginRight="10dp"
-                    android:layout_marginBottom="10dp"
-                    android:background="@drawable/bg_yellow_round_8"
-                    android:gravity="center_vertical"
-                    android:orientation="horizontal"
-                    android:paddingLeft="10dp"
-                    android:paddingRight="10dp">
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
 
-                    <TextView
-                        android:layout_width="0dp"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="成为趣鲜蜂会员，一年算不出省多少"
-                        android:textColor="@color/color_3B3838"
-                        android:textSize="12sp" />
 
-                    <TextView
-                        android:layout_width="wrap_content"
+                    <include
+                        layout="@layout/item_store_shadow"
+                        android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:drawableRight="@drawable/icon_link"
-                        android:text="加入会员>"
-                        android:textColor="@color/color_272525"
-                        android:textSize="12sp" />
+                        android:layout_marginLeft="5dp"
+                        android:layout_marginTop="100dp"
+                        android:layout_marginRight="5dp" />
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="30dp"
+                        android:layout_marginLeft="10dp"
+                        android:layout_marginTop="5dp"
+                        android:layout_marginRight="10dp"
+                        android:layout_marginBottom="10dp"
+                        android:background="@drawable/bg_yellow_round_8"
+                        android:gravity="center_vertical"
+                        android:orientation="horizontal"
+                        android:paddingLeft="10dp"
+                        android:paddingRight="10dp">
+
+                        <TextView
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="成为趣鲜蜂会员，一年算不出省多少"
+                            android:textColor="@color/color_3B3838"
+                            android:textSize="12sp" />
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:drawableRight="@drawable/icon_link"
+                            android:text="加入会员>"
+                            android:textColor="@color/color_272525"
+                            android:textSize="12sp" />
+                    </LinearLayout>
+
                 </LinearLayout>
 
-            </LinearLayout>
 
-
-            <androidx.appcompat.widget.Toolbar
-                android:id="@+id/ll_toolbar"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                app:contentInsetStart="0dp"
-                app:contentInsetStartWithNavigation="0dp"
-                app:layout_collapseMode="pin">
-
-                <RelativeLayout
+                <androidx.appcompat.widget.Toolbar
+                    android:id="@+id/ll_toolbar"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content">
-
-
-                    <View
-                        android:id="@+id/background"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:background="@color/white" />
-
-                    <View
-                        android:id="@+id/status_bar1"
-                        android:layout_width="match_parent"
-                        android:layout_height="25dp" />
+                    android:layout_height="wrap_content"
+                    app:contentInsetStart="0dp"
+                    app:contentInsetStartWithNavigation="0dp"
+                    app:layout_collapseMode="pin">
 
                     <RelativeLayout
                         android:layout_width="match_parent"
-                        android:layout_height="44dp"
-                        android:layout_below="@+id/status_bar1"
-                        android:orientation="horizontal">
-
-                        <ImageView
-                            android:id="@+id/iv_back"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_centerVertical="true"
-                            android:paddingLeft="10dp"
-                            android:paddingRight="10dp"
-                            android:src="@drawable/icon_back_bai" />
+                        android:layout_height="wrap_content">
 
 
-                        <ImageView
-                            android:id="@+id/iv_more"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_alignParentRight="true"
-                            android:layout_centerVertical="true"
-                            android:padding="10dp"
-                            android:src="@drawable/icon_more" />
-
-                        <ImageView
-                            android:id="@+id/iv_shoucang"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_centerVertical="true"
-                            android:layout_toLeftOf="@+id/iv_more"
-                            android:padding="10dp"
-                            android:src="@drawable/icon_shoucang" />
-
-                        <ImageView
-                            android:id="@+id/iv_search"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_centerVertical="true"
-                            android:layout_toLeftOf="@+id/iv_shoucang"
-                            android:padding="10dp"
-                            android:src="@drawable/icon_sousuo" />
-
-
-                        <TextView
-                            android:id="@+id/tv_search_1"
+                        <View
+                            android:id="@+id/background"
                             android:layout_width="match_parent"
-                            android:layout_height="30dp"
-                            android:layout_centerVertical="true"
-                            android:layout_marginLeft="10dp"
-                            android:layout_marginRight="10dp"
-                            android:layout_toLeftOf="@+id/iv_search"
-                            android:layout_toRightOf="@+id/iv_back"
-                            android:background="@drawable/bg_round100_grey"
-                            android:drawableLeft="@drawable/icon_search_xiao"
-                            android:drawablePadding="10dp"
-                            android:gravity="center_vertical"
-                            android:paddingLeft="10dp"
-                            android:text="搜索您想吃的食物"
-                            android:textColor="@color/color_CBCBCB"
-                            android:textSize="14sp" />
+                            android:layout_height="wrap_content"
+                            android:background="@color/white" />
+
+                        <View
+                            android:id="@+id/status_bar1"
+                            android:layout_width="match_parent"
+                            android:layout_height="25dp" />
+
+                        <RelativeLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="44dp"
+                            android:layout_below="@+id/status_bar1"
+                            android:orientation="horizontal">
+
+                            <ImageView
+                                android:id="@+id/iv_back"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_centerVertical="true"
+                                android:paddingLeft="10dp"
+                                android:paddingRight="10dp"
+                                android:src="@drawable/icon_back_bai" />
+
+
+                            <ImageView
+                                android:id="@+id/iv_more"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_alignParentRight="true"
+                                android:layout_centerVertical="true"
+                                android:padding="10dp"
+                                android:src="@drawable/icon_more" />
+
+                            <ImageView
+                                android:id="@+id/iv_shoucang"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_centerVertical="true"
+                                android:layout_toLeftOf="@+id/iv_more"
+                                android:padding="10dp"
+                                android:src="@drawable/icon_shoucang" />
+
+                            <ImageView
+                                android:id="@+id/iv_search"
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_centerVertical="true"
+                                android:layout_toLeftOf="@+id/iv_shoucang"
+                                android:padding="10dp"
+                                android:src="@drawable/icon_sousuo" />
+
+
+                            <TextView
+                                android:id="@+id/tv_search_1"
+                                android:layout_width="match_parent"
+                                android:layout_height="30dp"
+                                android:layout_centerVertical="true"
+                                android:layout_marginLeft="10dp"
+                                android:layout_marginRight="10dp"
+                                android:layout_toLeftOf="@+id/iv_search"
+                                android:layout_toRightOf="@+id/iv_back"
+                                android:background="@drawable/bg_round100_grey"
+                                android:drawableLeft="@drawable/icon_search_xiao"
+                                android:drawablePadding="10dp"
+                                android:gravity="center_vertical"
+                                android:paddingLeft="10dp"
+                                android:text="搜索您想吃的食物"
+                                android:textColor="@color/color_CBCBCB"
+                                android:textSize="14sp" />
+
+                        </RelativeLayout>
 
                     </RelativeLayout>
+                </androidx.appcompat.widget.Toolbar>
+            </com.google.android.material.appbar.CollapsingToolbarLayout>
 
-                </RelativeLayout>
-            </androidx.appcompat.widget.Toolbar>
-        </com.google.android.material.appbar.CollapsingToolbarLayout>
+            <com.google.android.material.tabs.TabLayout
+                android:id="@+id/tabLayout"
+                android:layout_width="200dp"
+                android:layout_height="40dp"
+                android:elevation="0dp"
+                app:tabGravity="start"
+                app:tabIndicator="@drawable/line_tab_indicator"
+                app:tabIndicatorColor="@color/color_FF6100"
+                app:tabIndicatorFullWidth="false"
+                app:tabIndicatorGravity="bottom"
+                app:tabMaxWidth="70dp"
+                app:tabMode="fixed"
+                app:tabSelectedTextColor="@color/color_272525"
+                app:tabTextColor="@color/color_7B7777" />
 
-        <com.google.android.material.tabs.TabLayout
-            android:id="@+id/tabLayout"
-            android:layout_width="200dp"
-            android:layout_height="40dp"
-            app:tabGravity="start"
-            android:elevation="0dp"
-            app:tabIndicator="@drawable/line_tab_indicator"
-            app:tabIndicatorColor="@color/color_FF6100"
-            app:tabIndicatorFullWidth="false"
-            app:tabIndicatorGravity="bottom"
-            app:tabMaxWidth="70dp"
-            app:tabMode="fixed"
-            app:tabSelectedTextColor="@color/color_272525"
-            app:tabTextColor="@color/color_7B7777" />
-
-    </com.google.android.material.appbar.AppBarLayout>
+        </com.google.android.material.appbar.AppBarLayout>
 
 
-    <!--    <androidx.core.widget.NestedScrollView-->
-    <!--        android:layout_width="match_parent"-->
-    <!--        android:layout_height="match_parent"-->
-    <!--        app:layout_behavior="@string/appbar_scrolling_view_behavior">-->
+        <!--    <androidx.core.widget.NestedScrollView-->
+        <!--        android:layout_width="match_parent"-->
+        <!--        android:layout_height="match_parent"-->
+        <!--        app:layout_behavior="@string/appbar_scrolling_view_behavior">-->
 
 
-    <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/view_pager"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_behavior="@string/appbar_scrolling_view_behavior" />
+        <androidx.viewpager2.widget.ViewPager2
+            android:id="@+id/view_pager"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
-    <!--    </androidx.core.widget.NestedScrollView>-->
+        <!--    </androidx.core.widget.NestedScrollView>-->
 
-    <include layout="@layout/dialog_store_bottom_selected"
-        android:id="@+id/view_selected"
+
+    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+    <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom"/>
+        android:layout_gravity="bottom">
 
-    <include layout="@layout/item_store_bottom"/>
-</androidx.coordinatorlayout.widget.CoordinatorLayout>
+        <View
+            android:id="@+id/view_background"
+            android:layout_width="1dp"
+            android:layout_height="1dp"
+            android:background="#66000000"
+            android:visibility="gone" />
+
+        <include
+            android:id="@+id/view_selected"
+            layout="@layout/dialog_store_bottom_selected"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:visibility="invisible" />
+    </FrameLayout>
+
+
+    <include layout="@layout/item_store_bottom" />
+
+</FrameLayout>
