--- a/app/src/main/res/layout/dialog_store_bottom_selected.xml
+++ b/app/src/main/res/layout/dialog_store_bottom_selected.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <com.bee.user.widget.DragDialogLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:id="@+id/draglayout">
 
     <RelativeLayout
         android:layout_width="match_parent"
